@@ -1,3 +1,7 @@
+2006-01-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* VirtualPathUtilityTest.cs: added new tests.
+
 2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* HttpRequestTest.cs: ignore test.
